--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <h1>Hello World</h1>
 
     <p>I'm hosted with GitHub Pages.</p>
-    
+
+    <h1>My First JavaScript</h1>
+
+    <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+        Click me to display Date and Time.</button>
+
+    <p id="demo"></p>
+
+
     <p>Goodbye now.</p>
-    
+
 </body>
 
 </html>
