--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <p>I'm hosted with GitHub Pages.</p>
 
-    <h1>My First JavaScript</h1>
+    <h2>My First JavaScript</h2>
 
     <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
         Click me to display Date and Time.</button>
 
-    <p id="demo"></p>
+    <p id="demo">Test ID.</p>
 
 
     <p>Goodbye now.</p>
