--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>My First JavaScript</h2>
 
     <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
-        Click me to display Date and Time.</button>
+        Click me to display Date and Time.</button> <br>
 
-    <p id="demo">Test ID.</p>
+    <br> <p id="demo">Test ID.</p>
 
 
     <p>Goodbye now.</p>
